Homepage decorating lesson image spacing fix

--- a/app/design/frontend/Shop/hh/web/css/main.less
+++ b/app/design/frontend/Shop/hh/web/css/main.less
@@ -6693,6 +6693,7 @@ Home Page
     .decorating-formula-thumb {
       margin: 20px auto;
       display: block;
+      width: 80%;
     }
     .decorating-formula-product:nth-of-type(3) {
       position: relative;
